# my-mirror-computer-oss

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  package-lock.json  package.json  setup-elevated-agent.ps1  tsconfig.base.json  tsconfig.json
apps/host-agent/: README.md  pyproject.toml
apps/host-agent/src/mirror_host_agent/: __init__.py  __main__.py  encoder_tuning.py  file_transfer.py  input_control.py  keep_awake.py  outgoing.py  signaling_watchdog.py  tray.py  video.py  windows_clipboard.py  windows_emergency_stop.py  windows_input.py
apps/host-agent/tests/: test_agent.py  test_encoder_tuning.py  test_file_transfer.py  test_input_control.py  test_keep_awake.py  test_outgoing.py  test_signaling_watchdog.py  test_tray.py  test_video.py
apps/signaling/: .dev.vars.example  package.json  wrangler.jsonc
apps/signaling/migrations/: 0001_init.sql
apps/signaling/src/: deviceToken.ts  index.ts  productionWebSocket.ts  sessionRoom.ts  turnCredentials.ts
apps/signaling/test/: deviceToken.test.ts  productionWebSocket.test.ts  turnCredentials.test.ts
apps/viewer/: index.html  package.json  tsconfig.json
apps/viewer/src/: App.tsx  MobileKeyboard.tsx  RemoteClipboard.tsx  connectionErrors.ts  developmentConfig.ts  fileUpload.ts  main.tsx  productionSession.ts  styles.css  useInputCapture.ts  useRemoteSession.ts  viewerMetrics.ts
apps/viewer/test/: App.test.tsx  (+9 more)
docs/: ARCHITECTURE.md  DEPLOYMENT.md
scripts/: capture-spike.py  dev-connect.ts  m0-e2e.ts  mint-device-token.ts  mint-viewer-ticket.ts  origin-matrix.ts
(+2 files in other folders)
